<resources>
    <!--If Jesus comes back Now, are you entering heaven? or you need to change something now-->
    <!--Galatians 5:16-26 -->
    <string name="app_name" translatable="false">Yami</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home_body" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer quis auctor. Tellus elementum sagittis vitae et leo duis ut diam. Faucibus purus in massa tempor. Semper risus in hendrerit gravida rutrum. Tristique et egestas quis ipsum suspendisse ultrices gravida. Sagittis eu volutpat odio facilisis mauris sit amet massa vitae. Duis at tellus at urna condimentum mattis pellentesque id. Proin sagittis nisl rhoncus mattis rhoncus. Vel turpis nunc eget lorem dolor sed viverra.

Non pulvinar neque laoreet suspendisse interdum consectetur libero id faucibus. In vitae turpis massa sed. Elementum facilisis leo vel fringilla est ullamcorper eget nulla. Morbi non arcu risus quis. Facilisis gravida neque convallis a cras semper. Accumsan sit amet nulla facilisi. Tellus id interdum velit laoreet id donec. Amet est placerat in egestas erat. Eget nunc scelerisque viverra mauris in aliquam sem fringilla. Semper quis lectus nulla at volutpat diam ut venenatis tellus. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Rhoncus dolor purus non enim praesent elementum facilisis leo. Vitae congue eu consequat ac felis donec. Ut aliquam purus sit amet.

Feugiat vivamus at augue eget. At elementum eu facilisis sed odio morbi quis commodo. Sit amet dictum sit amet justo donec. Nibh mauris cursus mattis molestie a iaculis at. Est velit egestas dui id. Scelerisque viverra mauris in aliquam sem fringilla ut morbi. Varius morbi enim nunc faucibus. Tempor orci dapibus ultrices in iaculis nunc sed augue lacus. In vitae turpis massa sed elementum tempus egestas sed sed. Porttitor lacus luctus accumsan tortor. Amet consectetur adipiscing elit ut aliquam purus sit. Bibendum est ultricies integer quis auctor. Aliquam vestibulum morbi blandit cursus. Quam pellentesque nec nam aliquam sem et tortor consequat.

Aliquet nec ullamcorper sit amet. Egestas quis ipsum suspendisse ultrices gravida dictum. Quis varius quam quisque id diam vel. Cras tincidunt lobortis feugiat vivamus at augue eget. Venenatis cras sed felis eget velit aliquet. Sed sed risus pretium quam vulputate dignissim. Faucibus ornare suspendisse sed nisi lacus sed viverra tellus in. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus. Odio ut enim blandit volutpat maecenas volutpat blandit. Habitasse platea dictumst vestibulum rhoncus. Ultrices tincidunt arcu non sodales neque sodales ut etiam sit. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Non quam lacus suspendisse faucibus interdum. A pellentesque sit amet porttitor eget. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus.

Turpis egestas sed tempus urna et pharetra pharetra massa. Aliquam sem et tortor consequat id. Est ante in nibh mauris cursus. Neque viverra justo nec ultrices dui sapien eget. Dolor sed viverra ipsum nunc aliquet bibendum. Vitae justo eget magna fermentum iaculis. Tellus orci ac auctor augue. Egestas congue quisque egestas diam in arcu cursus euismod. Non quam lacus suspendisse faucibus interdum posuere lorem ipsum. Faucibus nisl tincidunt eget nullam non nisi est. Integer eget aliquet nibh praesent tristique magna sit. Nam aliquam sem et tortor consequat. Sed tempus urna et pharetra pharetra massa massa. Gravida quis blandit turpis cursus in. Facilisi etiam dignissim diam quis enim lobortis. Magna fringilla urna porttitor rhoncus dolor purus non enim. Tincidunt lobortis feugiat vivamus at augue. Accumsan sit amet nulla facilisi morbi tempus iaculis. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Dictumst vestibulum rhoncus est pellentesque elit.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_as_admin">Login As Admin</string>
    <string name="user">User</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="adjust_business_info">Adjust Business Info</string>
    <string name="register_as_admin">Register As Admin</string>
</resources>